# PsychomotBilanGenerator

./: .gitignore  pyproject.toml  requirements.txt
config/: prompts.py  settings.py
notes/: notes_test.json
pbg/: __init__.py
shit/: benchmark.py  download_models_standalone.py  test.py
src/: __init__.py  cli.py
src/core/: cache.py  generator.py  models.py
src/output/: docx_writer.py  formatters.py
src/processing/: quality_checker.py  text_processor.py  validator.py
src/utils/: helpers.py  logging.py
