[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "psychomotbilan-generator"
version = "0.1.0"
description = "Générateur de bilans psychomoteurs à partir de notes structurées et d'un LLM local"
readme = "README.md"
authors = [
  { name="LjeAlexis", email="alexislajugiepro@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "transformers>=4.44.0",
  "accelerate>=0.33.0",
  "bitsandbytes>=0.43.0",
  "torch",
  "python-docx>=1.1.2"
]

[project.scripts]
pbg = "cli:main"